2009-05-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.28

	* configure.ac: 0.3.28

2009-05-21  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#111752 - No notification sounds after a hildon-home crash

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_init):
	* src/hd-notification-manager.c (hd_notification_manager_init): Use
	DBUS_NAME_FLAG_ALLOW_REPLACEMENT and DBUS_NAME_FLAG_REPLACE_EXISTING
	flags for the name request.

2009-05-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#108598 - Blank notification after device power up

	* debian/changelog: Update.

2009-05-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#109096 - Blank notification received for multplie messages.

	* src/hd-incoming-event-window.c (hd_incoming_event_window_realize):
	Make background transparent.
	* src/hd-notification-manager.c (copy_hash_table_item, idle_emit,
	  hd_notification_manager_notify): Move new notification signal
	  emission into idle handler.

	* debian/changelog: Update.

2009-05-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-event-window.c (PROP_AMOUNT, amount_label, message,
	  time, amount, hd_incoming_event_window_set_cardinal_xwindow_property,
	  hd_incoming_event_window_realize,
	  hd_incoming_event_window_get_property,
	  hd_incoming_event_window_set_property,
	  hd_incoming_event_window_class_init, hd_incoming_event_window_init):
	* src/hd-incoming-events.c (notifications_update_window): Add support
	to display the amount of notifications in the preview windows.

2009-05-18  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#110647 - Incoming Event Style Update
	Fixes: NB#112267 - Time for received notification is not matching with
	device time
	Fixes: NB#115818 - Second text line of incoming notification preview
	goes out of box

	* src/hd-incoming-event-window.c: Use new layout for incoming events.

	* debian/changelog: Update.

2009-05-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>